[workspace]
members = [
    'crates/ac-adapter-rs',
    'crates/disjoint_set/*',
    'crates/fp/*',
    'crates/heaps/*',
    'crates/balanced-tree/*',
    'crates/utils/*',
    'crates/string/*',
    'crates/algolib/*',
    'crates/range-query/*',
    'crates/math/*',
    'crates/geometry/*',
    'crates/flow/*',
]
