[package]
name = "rmq"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordtools = { path = "../ordtools" }

[dev-dependencies]
segtree = { path = "../segtree" }
