[package]
name = "rmq"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordtools = { path = "../ordtools" }
rand = "0.7.3"

[dev-dependencies]
segtree = { path = "../segtree" }
criterion = "0.3"

[[bench]]
name = "rmq"
harness = false
