[package]
name = "ac-adapter-rs"
version = "0.1.0"
authors = ["Kana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accum = { path = "../utils/accum" }
advance = { path = "../utils/advance" }
bfs = { path = "../algolib/bfs" }
bfs01 = { path = "../algolib/bfs01" }
bitset = { path = "../utils/bitset" }
convex_hull = { path = "../geometry/convex_hull" }
dbg = { path = "../utils/dbg" }
dfs = { path = "../algolib/dfs" }
dial = { path = "../algolib/dial" }
dijkstra_radix_heap = { path = "../algolib/dijkstra_radix_heap" }
dinic = { path = "../flow/dinic" }
erato = { path = "../math/erato" }
euclid = { path = "../math/euclid" }
fact = { path = "../utils/fact" }
fp = { path = "../utils/fp" }
grid = { path = "../utils/grid" }
gridtools = { path = "../utils/gridtools" }
hld = { path = "../algolib/hld" }
hopkarp = { path = "../flow/hopkarp" }
hungarian = { path = "../flow/hungarian" }
inversion_number = { path = "../algolib/inversion_number" }
lazy_segbeats = { path = "../range-query/lazy_segbeats" }
lazy_segtree = { path = "../range-query/lazy_segtree" }
max_flow = { path = "../algolib/max_flow" }
newton = { path = "../math/newton" }
next_permutation = { path = "../utils/next_permutation" }
ngtio = { path = "../utils/ngtio" }
not_nan = { path = "../utils/not_nan" }
open = { path = "../utils/open" }
ordtools = { path = "../utils/ordtools" }
prefix_sum = { path = "../utils/prefix_sum" }
radix_heap = { path = "../algolib/radix_heap" }
randtools = { path = "../utils/randtools" }
reverse = { path = "../utils/reverse" }
scc = { path = "../algolib/scc" }
segbeats = { path = "../range-query/segbeats" }
segbeats_task3 = { path = "../range-query/segbeats_task3" }
segtree = { path = "../range-query/segtree" }
seq = { path = "../utils/seq" }
small_fp = { path = "../algolib/small_fp" }
space = { path = "../utils/space" }
span = { path = "../utils/span" }
sparse_table = { path = "../range-query/sparse_table" }
suffix_array = { path = "../algolib/suffix_array" }
swag = { path = "../range-query/swag" }
trial = { path = "../math/trial" }
trie = { path = "../string/trie" }
union_find = { path = "../algolib/union_find" }
z_algorithm = { path = "../algolib/z_algorithm" }
zeta = { path = "../algolib/zeta" }
