[package]
name = "bfs"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
randtools = { path = "../randtools" }
dbg = { path = "../dbg" }
rand = "0.8.2"
accum = { path = "../accum" }
