[package]
name = "gco"
version = "0.1.0"
authors = ["Kana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dinic = { path = "../dinic" }

[dev-dependencies]
rand = "0.8.3"
randtools = { path = "../randtools/" }
