[package]
name = "gss"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true }
randtools = { path = "../randtools/" }
test-case = { workspace = true }
