[package]
name = "hld"
version = "0.1.0"
authors = ["Kana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
bfs = { path = "../bfs/" }
itertools = "0.10.0"
make_graph = { path = "../make_graph/" }
rand = "0.8.3"
randtools = { path = "../randtools/" }
