[package]
name = "hld"
version = "0.1.0"
authors = ["Kana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
bfs = { path = "../bfs/" }
itertools = { workspace = true }
make_graph = { path = "../make_graph/" }
rand = { workspace = true }
randtools = { path = "../randtools/" }
