[package]
name = "hopkarp"
version = "0.1.0"
authors = ["Kana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbg = { path = "../dbg/" }

[dev-dependencies]
itertools = { workspace = true }
rand = { workspace = true }
test-case = { workspace = true }
