[package]
name = "hungarian"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
approx = { workspace = true }
itertools = { workspace = true }
next_permutation = { path = "../next_permutation/" }
rand = { workspace = true }
test-case = { workspace = true }
