[package]
name = "lazy_segbeats"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies.query_test]
git = "https://github.com/ngtkana/query_test.git"
tag = "v0.3.0"
package = "query_test"

[dependencies]
open = { path = "../open" }

[dev-dependencies]
rand = { workspace = true }

