[package]
name = "fps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fp = { version = "0.1.0", path = "../fp" }

[dev-dependencies]
num.workspace = true
rand.workspace = true
itertools.workspace = true
