[package]
name = "gco"
version = "0.1.0"
authors = ["Kana <ngtkana@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dinic = { path = "../dinic" }

[dev-dependencies]
rand = { workspace = true }
randtools = { path = "../randtools/" }
