[package]
name = "segbeats"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies.query_test]
git = "https://github.com/ngtkana/query_test.git"
tag = "v0.3.0"
package = "query_test"

[dev-dependencies]
rand = { workspace = true }

