[package]
name = "sort_tree"
version = "0.1.0"
authors = ["Kana <ngtkana@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = { workspace = true }
randtools = { path = "../randtools" }
