[package]
name = "uf_checklist"
version = "0.1.0"
authors = ["Kana <ngtkana@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
union_find = { path = "../union_find/" }

[dev-dependencies]
rand = { workspace = true }
randtools = { path = "../randtools/" }
