[package]
name = "bfs"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
randtools = { path = "../../utils/randtools" }
dbg = { path = "../../utils/dbg" }
rand = "0.7.3"
accum = { path = "../../utils/accum" }
