[package]
name = "dial"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.7.3"
randtools = { path = "../../utils/randtools" }
accum = { path = "../../utils/accum" }
dbg = { path = "../../utils/dbg" }
