[package]
name = "fenwick"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbg = { path = "../../utils/dbg" }

[dev-dependencies]
test_utils = { path = "../../test_utils" }
fp = { path = "../../utils/fp" }
constant = { path = "../../utils/constant" }
rand = "0.7.3"
