[package]
name = "golden_section_search_integer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.8.4"
randtools = { path = "../../utils/randtools/" }
test-case = "1.1.0"
