[package]
name = "hld"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

[dev-dependencies]
rand = "0.8.2"
bfs = { path = "../bfs/" }
randtools = { path = "../../utils/randtools" }
dbg = { path = "../../utils/dbg" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

