[package]
name = "lazy_segtree"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alg_traits = { path = "../../algebra/alg_traits" }
open = { path = "../../utils/open" }

[dev-dependencies.query_test]
git = "https://github.com/ngtkana/query_test.git"
tag = "v0.2.1"
package = "query_test"

[dev-dependencies]
rand = "0.7.3"
test_vector = { path = "../../test_tools/test_vector" }
yosupo = { path = "../../test_tools/yosupo" }
ngtio = { path = "../../utils/ngtio" }
fp2 = { path = "../../utils/fp2" }
